tests/fail/non_null_nullptr.tk
fn main() -> i32 {
    auto *p: i32 = null // EXPECT: error[E0409]:
    return 0
}
